# CPPAssignments1

./: CMakeLists.txt  README.md
Sources/: Assignment1.hpp  Assignment2.hpp  Assignment3.hpp  Assignment4.hpp  Assignment5.hpp  Libraries.hpp  Main.cpp
Sources/Assignment6/Solution1/: MyPoint.cpp  MyPoint.h  TestMyPoint.cpp
Sources/Assignment6/Solution2/: MyComplex.cpp  MyComplex.h  TestMyComplex.cpp
Sources/Assignment7/Solution1/: MyPolynomial.cpp  MyPolynomial.h  MyTerm.cpp  MyTerm.h  TestMyPolynomial.cpp
Sources/Assignment7/Solution2/: MyRational.cpp  MyRational.h  TestMyRational.cpp
